== Change Log

=== Edge

* Dropped BlueCloth for kramdown [John Muhl]
* Updated sample images for Textile and Markdown [Jim Gay]
* Refactored Sass to separate out common styles [Jim Gay]
* Upgraded to HAML 2.2.19 [Jim Gay]
* Add future publishing feature [Anna Billstrom, Benny Degezelle, Jim Gay]
* Fixed support for newer Cucumber version [M. Scott Ford, William Ross]
* Fixed a bug in if/unless_content tags [Benny Degezelle]
* Support packaging extensions as gems [Josh French]
* Add tag reference to Layouts and Snippets [Jim Gay]
* Handle deploying to a sub-directory [Jim Gay]
* Ensure that generator specs actually test properly [Travis D. Warlick]
* Properly display errors on user password changes [Jim Gay]
* Prevent admin from removing her own admin privilege [Jim Gay]
* Move to Rails 2.3.5 [Jim Gay]
* Simplify admin tab API [Jim Gay, John Long, Sean Cribbs]

=== 0.9.0 RC1 (October 9, 2009)

* Turned on HAML's "ugly" whitespace mode in production [John Muhl]
* Use HTML 5 doctype. [John Muhl]
* Miscellaneous HTML standards improvements [John Muhl]
* Fixed bug where pages were being cached in dev mode. This has been a problem since switching to Rack::Cache. [Jason Garber]
* Snippets are now only accessible to people with the "Designer" role. [John Long]
* Renamed "Developer" role to "Designer". [John Long]
* Verify that the cache directory exists before trying to store a response. [Sean Cribbs]
* Fix page-part deletion in JS. [Sean Cribbs]
* Don't cache extension-defined javascripts, but do cache the defaults. [Sean Cribbs]
* Fix dev-site behavior when 'dev.host' is configured. [Chris Ricca]
* Concatenate admin javascript files. [John Muhl]
* Use more descriptive page titles. [John Muhl]
* Allow non-standard controller methods for render_region. [Jim Gay]
* Updated to use Radius 0.6.1. [John Long]
* Correct type on content-type and move to more/hide language. [John Long]
* Add some helpful shortcut keys. [Sean Cribbs]