@@ -34,12 +34,17 @@ Install type:   #{install_type}
     end
 
     def tasks_include?(command)
-      extension = command.split(':')[2]
+      extension = command.split('radiant:extensions:')
+      if extension.length > 1
+        extension = extension.reject{|e| e.blank? }[0]
+      else
+        extension = extension.to_s
+      end
       rake_file = File.join(RAILS_ROOT, 'vendor', 'extensions', extension) + '/lib/tasks/' + extension + '_extension_tasks.rake'
       if File.exist? rake_file
         load rake_file
-        tasks = Rake.application.tasks.map(&:name)
       end
+      tasks = Rake.application.tasks.map(&:name)
       tasks.include? "#{command}"
     end
     
